--- a/Cargo.toml
+++ b/Cargo.toml
@@ -6,3 +6,5 @@ edition = "2021"
 [dependencies]
 anyhow = "1.0.70"
 arboard = { version = "3.2.0", default-features = false }
+clap = { version = "4.2", features = ["cargo"] }
+libc = "0.2.140"
